# MidiPlayerSFML

./: .gitignore  .gitmodules
MidiSFML/: CMakeLists.txt
MidiSFML/App/: App.cpp  App.hpp  CMakeLists.txt  VisAlgorithm.cpp  VisAlgorithm.hpp
MidiSFML/Building_Linux/: build.sh  configuration.sh  run.sh
MidiSFML/MidiPlayer/: CMakeLists.txt  Chord.hpp  MidiGenerator.cpp  MidiGenerator.hpp  Parser.hpp
MidiSFML/Utils/: CMakeLists.txt  fileSystem.cpp  fileSystem.hpp
MidiSFML/lib/: CMakeLists.txt  sfMidi.h
MidiSFML/lib/SFML/Network/: Http.hpp
MidiSFML/lib/SFML/Window/: Clipboard.hpp  Context.hpp
MidiSFML/lib/cxxmidi/: CMakeLists.txt
MidiSFML/lib/cxxmidi/guts/: player_base.hpp
MidiSFML/lib/cxxmidi/output/linux/: alsa.hpp  asoundlib.h  poll.h
MidiSFML/lib/fluidsynth/: CMakeLists.txt
MidiSFML/lib/midifile/: CMakeLists.txt
MidiSFML/lib/sfMidi/: CMakeLists.txt  Loader.cpp  Loader.h  Midi.cpp  Midi.h  Music.cpp  Music.h
MidiSFML/libs/sfMidi/: CMakeLists.txt  Changelog.md  License.md  Readme.md
MidiSFML/libs/sfMidi/test/: All Night Long_mid.txt  License.txt  Readme.txt
