add_library(MidiPlayer_Src
        mNote.hpp
        Song.hpp
        Parser.hpp
        MidiGenerator.hpp
        Chord.hpp
        Song.cpp
        MidiGenerator.cpp
        Note.cpp
        Chord.cpp
        SongLine.hpp
        Parser.cpp
        SongLine.cpp
        MidiPlayer.hpp
        MidiPlayer.cpp
)